overlays/nginx_rollout_blue_green/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue
spec:
  replicas: 0
  selector:
    matchLabels:
      app: blue
  template:
    metadata:
      labels:
        app: blue
    spec:
      containers:
      - image: docker.io/argoproj/rollouts-demo:blue
        imagePullPolicy: IfNotPresent
        name: blue
        ports:
        - containerPort: 8000
